--- a/resources/logreg_train.ipynb
+++ b/resources/logreg_train.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -181,7 +181,7 @@
        "3                  -0.014040 -256.84675  200.64  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,12 +217,16 @@
     "    def __init__(self):\n",
     "        self=self\n",
     "    \n",
-    "    def __cleaning(self,path,column):\n",
+    "    def __cleaning(self,path,column,dataset):\n",
     "        data = pd.read_csv(path)\n",
-    "        data = data.dropna().reset_index(drop=True)\n",
-    "        data = data.drop(['Index'], axis=1)\n",
-    "        spread = pd.get_dummies(data[str(column)])\n",
-    "        final_data = pd.concat([data, spread], axis=1)\n",
+    "        if (dataset == 'test'): \n",
+    "            data = data.drop(['Index',str(column)], axis=1)        \n",
+    "            final_data = data.dropna().reset_index(drop=True)\n",
+    "        else:\n",
+    "            data = data.dropna().reset_index(drop=True)\n",
+    "            data = data.drop(['Index'], axis=1)\n",
+    "            spread = pd.get_dummies(data[str(column)])\n",
+    "            final_data = pd.concat([data, spread], axis=1)\n",
     "        return final_data\n",
     "    \n",
     "    def __minimum(self,frame):\n",
@@ -249,8 +253,8 @@
     "        data['Intercept'] = 1\n",
     "        return data.filter(['Intercept'] + list(cols))\n",
     "        \n",
-    "    def preprocess(self,path,column):\n",
-    "        data = self.__cleaning(path, column)\n",
+    "    def preprocess(self,path,column,dataset):\n",
+    "        data = self.__cleaning(path, column,dataset)\n",
     "        inter_data = self.__selection(data)\n",
     "        final_data = self.__add_intercept(inter_data)\n",
     "        return final_data"
@@ -265,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,15 +350,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def training(path,output_column):\n",
+    "def training(path,output_column,dataset,lr, iterations):\n",
     "    pre = preprocess()\n",
-    "    data = pre.preprocess(path,output_column)\n",
+    "    data = pre.preprocess(path,output_column,dataset)\n",
     "    outputs = ['Gryffindor', 'Slytherin', 'Ravenclaw', 'Hufflepuff']\n",
-    "    model = LogReg(lr = 0.01, iterations = 1000)\n",
+    "    model = LogReg(lr = lr, iterations = iterations)\n",
     "    \n",
     "    weights(data,outputs,model).to_csv('logreg_weights.csv')\n",
     "    print(accuracy(data,outputs,model))"
@@ -362,19 +366,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9280575539568345\n"
+      "0.9832134292565947\n"
      ]
     }
    ],
    "source": [
-    "training('dataset_train.csv', 'Hogwarts House')"
+    "training(path = 'dataset_train.csv', \n",
+    "         output_column='Hogwarts House',\n",
+    "         dataset = 'train', \n",
+    "         lr=0.1,\n",
+    "         iterations=10000)"
    ]
   }
  ],
